--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ language: minimal
 services:
   - docker
 
-before_install:
-  ./scripts/ci_test.sh
+before_install: ./scripts/ci_test.sh
 
 notifications:
   email: false
